--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,1 +1,170 @@
-<h1>hello</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</head>
+
+<body>
+
+    <div class="frame">
+        <div class="main_frame">
+            <div class="left_frame">
+                <div class="left-1">
+                    <div class="left_1-1">
+                        <img 
+                            src="images/profile.png"
+                            width="156px"
+                            height="142px"
+                            alt=""
+                        >
+                    </div>
+                    <div class="left_1-2"><%=user.name%></div>
+                    <div class="left_1-3"><%=user.profession%></div>
+                    <div class="left-icons">
+                        <a href="" class="link_href">
+                            <div class="icon">
+                                <img src="icon/Facebook.svg" class="icon-1" />
+                            </div>
+                        </a>
+                        <a href="" class="link_href">
+                            <div class="icon">
+                                <img src="icon/Instagram.svg" class="icon-1" />
+                            </div>
+                        </a>
+                        <a href="" class="link_href">
+                            <div class="icon">
+                                <img src="icon/Twitter.svg" class="icon-1" />
+                            </div>
+                        </a>
+                        <a href="" class="link_href">
+                            <div class="icon">
+                                <img src="icon/Linkeding.svg" class="icon-1" />
+                            </div>
+                        </a>
+                        <a href="" class="link_href">
+                            <div class="icon">
+                                <img src="icon/Youtube.svg" class="icon-1" />
+                            </div>
+                        </a>
+                        <a href="" class="link_href">
+                            <div class="icon">
+                                <img src="icon/Dribbble.svg" class="icon-1" />
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="marginer"></div>
+                <div class="left-2">
+                    <div class="about">
+                        <p class="about_icon">Age:</p>
+                        <p><%=user.age%></p>
+                    </div>
+                    <div class="about">
+                        <p class="about_icon">Residence:</p>
+                        <p><%=user.residence%></p>
+                    </div>
+                    <div class="about">
+                        <p class="about_icon">Freelance:</p>
+                        <p class="green_btn">Available</p>
+                    </div>
+                    <div class="about">
+                        <p class="about_icon">Address:</p>
+                        <p><%=user.address%></p>
+                    </div>
+                </div>
+                <div class="marginer"></div>
+                <div class="left-3">
+                    <div class="languages">
+                        <h4 class="languages_icon">Languages:</h4>
+                        <div class="lan-1">
+                            <p>Uzbek</p>
+                            <p class="per">100%</p>
+                        </div>
+                        <div class="lan-1">
+                            <p>Korean</p>
+                            <p class="per">50%</p>
+                        </div>
+                        <div class="lan-1">
+                            <p>English</p>
+                            <p class="per">70%</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="marginer"></div>
+                <div class="left-4">
+                    <div class="skills">
+                        <h4 class="skills_icon">Skills:</h4>
+                        <div class="skill-1">
+                            <p>Html</p>
+                            <p class="per">100%</p>
+                        </div>
+                        <div class="skill-1">
+                            <p>CSS</p>
+                            <p class="per">50%</p>
+                        </div>
+                        <div class="skill-1">
+                            <p>Js</p>
+                            <p class="per">80%</p>
+                        </div>
+                        <div class="skill-1">
+                            <p>NodeJS</p>
+                            <p class="per">70%</p>
+                        </div>
+                        <div class="skill-1">
+                            <p>Python</p>
+                            <p class="per">90%</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="marginer"></div>
+                <div class="left-5">
+                    <div class="ex_skills">
+                        <h4 class="ex_skills_icon">Extra Skills:</h4>
+                        <% user.extra_skills.slice(0, 3).forEach(skill => { %>
+                            <div class="ex_skill-1">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15" fill="none">
+                                    <rect x="0.5" y="0.5" width="9" height="9" stroke="#FFB400"/>
+                                    <rect x="5.5" y="5.5" width="9" height="9" stroke="#FFB400"/>
+                                </svg>
+                                <p><%= skill %></p>
+                            </div>
+                        <% }) %>
+                    </div>
+                </div>
+                
+                <div class="marginer">
+
+                </div>
+            </div>
+            <div class="midd_frame">
+                <div class="midd-1">
+                    <div class="heading">
+                        <h1><%=user.work_place%></h1>
+                    </div>
+                    <div class="m-logo">
+                        <div class="logo">
+                            <img src="images/logo.png" alt="">
+                        </div>
+                    </div>
+                    <div class="desc">
+                        <p><%=user.service_desc%></p>
+                    </div>
+                    <div class="btn-main">
+                        <button type="button" class="btn-1">Hire Me</button>
+                    </div>
+                </div>
+                <div class="midd-2"></div>
+            </div>
+            <div class="right_frame"></div>
+        </div>
+    </div>
+    
+</body>
+
+</html>
