--- a/views/author.ejs
+++ b/views/author.ejs
@@ -144,22 +144,25 @@
             </div>
             <div class="midd_frame">
                 <div class="midd-1">
-                    <div class="heading">
-                        <h1><%=user.work_place%></h1>
-                    </div>
-                    <div class="m-logo">
-                        <div class="logo">
-                            <img src="images/logo.png" alt="">
+                    <div class="content">
+                        <div class="heading">
+                            <h1><%=user.work_place%></h1>
+                        </div>
+                        <div class="desc">
+                            <p><%=user.service_desc%></p>
+                        </div>
+                        <div class="btn-main">
+                            <button type="button" class="btn-1">Hire Me →</button>
                         </div>
                     </div>
-                    <div class="desc">
-                        <p><%=user.service_desc%></p>
-                    </div>
-                    <div class="btn-main">
-                        <button type="button" class="btn-1">Hire Me</button>
+                    <div class="image-container">
+                        <img src="images/logo.png" alt="Doctor Image">
                     </div>
                 </div>
-                <div class="midd-2"></div>
+                
+                <div class="midd-2">
+                    
+                </div>
             </div>
             <div class="right_frame"></div>
         </div>
