--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -22,10 +22,11 @@
                     style="flex: 1"
                     type="text"
                   >
-                  <button style="border-radius: 20px;" class="btn btn-primary">Submit</button>
+                  <button style="border-radius: 20px;" class="btn btn-primary">Reja qoshish</button>
                 </div>
               </form>
         </div>
+        <button style="border-radius: 20px;" class="btn btn-danger">Delete</button>
     </div>
 </body>
 </html>
