--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -11,7 +11,7 @@
     <div class="container">
         <h1 class="display-4 text-center py-1">REJA VA MAQSADLAR</h1>
         <div class="jumbotron p-3 shadow-sm">
-            <form id="create-form" action="/create-item" method="POST">
+            <form id="create-form" action="/create-item" method="POST"> 
                 <div class="d-flex align-items-center">
                   <input 
                     id="create-field"
@@ -45,5 +45,8 @@
 
         <button style="border-radius: 20px;" class="btn btn-danger">Delete</button>
     </div>
+
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/browser.js"></script>
 </body>
 </html>
