Update id #delete-all to #clean-all
Bitta id xati ekan😅

--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -43,7 +43,7 @@
           <% }) %>
         </ul>
 
-        <button id="delete-all" style="border-radius: 20px;" class="btn btn-danger">Delete</button>
+        <button id="clean-all" style="border-radius: 20px;" class="btn btn-danger">Delete</button>
     </div>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
